--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -37,38 +37,29 @@ $h4-font-size: $font-size-base * 2.125;
 $h5-font-size: $font-size-base * 1.5;
 $h6-font-size: $font-size-base * 1.25;
 
-@import "~bootstrap/scss/bootstrap.scss";
+@import '~bootstrap/scss/bootstrap.scss';
 @font-face {
-  font-family: "TaipeiSansTCBeta-Regular";
-  src: url("font/TaipeiSansTCBeta-Regular.ttf");
+  font-family: 'TaipeiSansTCBeta-Regular';
+  src: url('font/TaipeiSansTCBeta-Regular.ttf');
 }
 @font-face {
-  font-family: "TaipeiSansTCBeta-Bold";
-  src: url("font/TaipeiSansTCBeta-Bold.ttf");
+  font-family: 'TaipeiSansTCBeta-Bold';
+  src: url('font/TaipeiSansTCBeta-Bold.ttf');
 }
 @font-face {
-  font-family: "TaipeiSansTCBeta-Light";
-  src: url("font/TaipeiSansTCBeta-Light.ttf");
+  font-family: 'TaipeiSansTCBeta-Light';
+  src: url('font/TaipeiSansTCBeta-Light.ttf');
 }
 
 body {
-  font-family: "TaipeiSansTCBeta-Regular" !important;
+  font-family: 'TaipeiSansTCBeta-Regular' !important;
 }
 
 $rose: #f3b4ba;
-main > .container {
-  padding: 60px 15px 0;
-}
-.footer {
-  background-color: #f5f5f5;
-}
-html {
-  font-size: 12px;
-}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
 .bg-primary-900 {
   background: $primary-900;
@@ -145,7 +136,10 @@ body {
 .bg-yellow {
   background: $yellow;
 }
-h1 {
+.font-bold {
+  font-family: TaipeiSansTCBeta-Bold;
+}
+.font-light {
   font-family: TaipeiSansTCBeta-Bold;
 }
 .subtitle1 {
