--- a/src/style/main_class.scss
+++ b/src/style/main_class.scss
@@ -1,63 +1,73 @@
 @import 'default.scss';
 $url: 'http://localhost:3000';
-.wrapper{
-    max-width: 1160px;
-    margin:0 auto;
+
+.wrapper {
+  max-width: 1160px;
+  margin: 0 auto;
 }
 
-.organizer{
-    width:56px;
-    height:56px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-right:75px;
-    border: 1px solid gray;
-    
-  }
-  
-.organizer img{
-    width:100%;
-  }
-
-.page-head{
-    // border:1px solid green;
-    padding-top:42px;
-}
-.page-head-part2{
-    display:flex;
-    justify-content: space-between;
+.organizer {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 75px;
+  border: 1px solid gray;
 }
 
-button{
-    width: 111px;
-    height: 38px;
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    background-color:$primary-600;
+.organizer img {
+  width: 100%;
 }
 
-.organizer_info{
-    border:1px solid red;
-    display:flex;
-    flex-direction: row;
+.page-head {
+  // border:1px solid green;
+  padding-top: 42px;
+  border: 1px solid green;
+}
+.page-head-part2 {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid red;
+  margin-top: 20px;
 }
 
-.btn_part{
-    // border:1px solid red;
-    display:flex;
-    align-items:flex-end;
+button {
+  width: 111px;
+  height: 38px;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  background-color: $primary-600;
 }
 
-.wave_background{
-    background: url($url+"/Pic/SVG/wave2.svg") ;
-    border:1px solid black;
-    width:100%;
-    height:535.9px;
-    top:40px;
-    background-repeat: no-repeat;
-    background-size:cover;
-    
+.organizer_info {
+  border: 1px solid red;
+  display: flex;
+}
+
+.organizer_info > span {
+  margin-left: -60px;
+}
+
+.btn_part {
+  // border:1px solid red;
+  display: flex;
+  align-items: flex-end;
+}
+
+.wave_background {
+  background: url($url + '/Pic/SVG/wave2.svg');
+  border: 1px solid black;
+  width: 100%;
+  height: 535.9px;
+  top: 40px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bread_crumb {
+  border: 1px solid brown;
+  margin-top: 43px;
 }
