瀏覽器改成100%就完美惹! 新增標籤的hover狀態git add .!

--- a/src/style/event_search.scss
+++ b/src/style/event_search.scss
@@ -66,5 +66,9 @@ body {
     .searchbar {
       margin-left: 36.5px;
     }
+    .ta:hover {
+      color: $secondary;
+      border: 1px solid $secondary;
+    }
   }
 }
