--- a/src/style/member_card.scss
+++ b/src/style/member_card.scss
@@ -34,7 +34,52 @@
 }
 
 .mem_listbar {
-  background-color: $secondary;
+  background-color: $secondary-700;
   width: 8px;
   height: 38px;
+  margin: 0 40px 0 0;
+  opacity: 0;
+}
+
+.mem_navlist_icon:hover {
+  .mem_listbar {
+    opacity: 0.5;
+  }
+}
+.mem_navlist_icon:active {
+  .mem_listbar {
+    opacity: 1;
+  }
+}
+.mem_navlist_icon {
+  svg {
+    color: $primary;
+    width: 30px;
+    height: 30px;
+    margin: 0 10px 5px 0;
+  }
+}
+
+.mem_navlist_icon:hover {
+  svg {
+    color: $secondary-700;
+    opacity: 0.5;
+  }
+  h6 {
+    color: $secondary-700;
+    opacity: 0.5;
+  }
+}
+
+.mem_navlist_icon:active {
+  svg {
+    color: $secondary-700;
+    opacity: 1;
+    font-family: 'TaipeiSansTCBeta-Regular';
+  }
+  h6 {
+    color: $secondary-700;
+    opacity: 1;
+    font-family: 'TaipeiSansTCBeta-Regular';
+  }
 }
