--- a/src/style/main_class.scss
+++ b/src/style/main_class.scss
@@ -80,7 +80,7 @@ button {
   height: 305px;
   border: 1px solid red;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 20px 0;
   border-radius: 10px;
 }
 
