--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -1,13 +1,10 @@
-
 // 預設變數覆蓋需要在導入Bootstrap之前
 // $navbar-dark-hover-color:pink;
 // $navbar-dark-active-color:blue ;
 
-
 // Import Bootstrap and its default variables
 
 @import 'default.scss';
-
 
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 
@@ -15,20 +12,21 @@ main > .container {
   padding: 60px 15px 0;
 }
 
-body{
-  background:burlywood
-}
+// body {
+//   background: burlywood;
+//   padding-top: 80px;
+// }
 
-.navbar{
-  height:80px;
+.navbar1 {
+  height: 80px;
 }
 
 .nav1 {
-  display:flex;
+  display: flex;
   align-items: center;
   font-size: 16px;
   font-family: TaipeiSansTCBeta;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
 .nav1 > .navLink {
@@ -37,32 +35,32 @@ body{
 }
 
 .nav2 {
-  display:flex;
+  display: flex;
   align-items: center;
-  font-size:20px;
-  margin-right:18px;
+  font-size: 20px;
+  margin-right: 18px;
   // background:pink
 }
 
 .Logo {
   height: 30px;
   margin-left: 75px;
+  border: 1px solid red;
 }
 
-.memberPhoto{
-  width:42px;
-  height:42px;
+.memberPhoto {
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
   overflow: hidden;
-  margin-right:75px;
-  border: 1px solid gray;
-  
+  margin-right: 75px;
+  border: 1px solid red;
 }
 
-.memberPhoto img{
-  width:100%;
+.memberPhoto img {
+  width: 100%;
 }
 
-.icon{
-  font-size:26px;
+.icon {
+  font-size: 26px;
 }
