--- a/src/style/main_class.scss
+++ b/src/style/main_class.scss
@@ -22,12 +22,10 @@ $url: 'http://localhost:3000';
 .page-head {
   // border:1px solid green;
   padding-top: 42px;
-  border: 1px solid green;
 }
 .page-head-part2 {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
   margin-top: 20px;
 }
 
@@ -43,7 +41,6 @@ button {
 }
 
 .organizer_info {
-  border: 1px solid red;
   display: flex;
 }
 
@@ -60,9 +57,8 @@ button {
 // 波浪背景
 .wave_background {
   background: url($url + '/Pic/SVG/wave2.svg');
-  border: 1px solid black;
   width: 100%;
-  height: 535.9px;
+  height: 536px;
   top: 40px;
   background-repeat: no-repeat;
   background-size: cover;
@@ -70,7 +66,6 @@ button {
 
 // 麵包屑
 .bread_crumb {
-  border: 1px solid brown;
   margin-top: 43px;
 }
 
@@ -78,12 +73,17 @@ button {
 .class_pic {
   width: 730px;
   height: 305px;
-  border: 1px solid red;
   overflow: hidden;
-  margin: 20px 0;
+  margin: 0 87px 44px 0px;
   border-radius: 10px;
 }
 
 .class_pic img {
   object-fit: contain;
+}
+
+.page-head-part3 {
+  display: flex;
+  margin-top: 20px;
+  border: 1px solid black;
 }
