--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -170,7 +170,7 @@ body {
   font-size: 10px;
 }
 .my-container {
-  max-width: (calc(100vw - 150px));
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0px;
 }
