--- a/src/style/class/gmap.scss
+++ b/src/style/class/gmap.scss
@@ -1,5 +1,4 @@
 .map {
-  border: 4px solid red;
   width: 343px;
   height: 386px;
   overflow: hidden;
@@ -14,13 +13,11 @@
   display: flex;
   align-items: center;
   width: 180px;
-  color: blue;
-  border: 1px solid red;
+  color: black;
 }
 
 .pin-icon {
   font-size: 4rem;
-  border: 1px solid green;
 }
 
 .pin-text {
