--- a/src/style/class/main_class.scss
+++ b/src/style/class/main_class.scss
@@ -173,7 +173,7 @@ h4 {
 
 .gallery_part {
   margin-top: 270px;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 
 .suggested {
@@ -185,3 +185,7 @@ h4 {
   margin-top: 90px;
   display: flex;
 }
+
+// .carousel_block {
+//   border: 1px solid red;
+// }
