--- a/src/style/event_search.scss
+++ b/src/style/event_search.scss
@@ -1,6 +1,7 @@
 @import './default.scss';
 @import '~bootstrap/scss/_Carousel.scss';
 @import './searchbar.scss';
+
 .carousel-item {
   height: calc(100vh - 80px);
   > .carousel-img {
@@ -37,13 +38,18 @@ body {
   position: relative;
   .wave1 {
     position: absolute;
-    // z-index: 30;
     top: calc(100vh - 290px);
+    background-image: url('http://localhost:3000/Pic/SVG/wave-white-1440.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+    width: 100%;
+    height: 291px;
     // background: blue;
-    img {
-      width: 100vw;
-      object-fit: contain;
-    }
+    // img {
+    //   width: 100vw;
+    //   object-fit: contain;
+    // }
   }
   .event-search-bar {
     position: absolute;
@@ -78,7 +84,7 @@ body {
     font-family: 'TaipeiSansTCBeta-Bold';
     z-index: 55;
     right: 91px;
-    top: 825px;
+    top: calc(100vh - 72px);
     color: $primary;
     // background: blue;
     text-align: right;
@@ -97,13 +103,14 @@ body {
   }
 }
 
+//EventResult
 .event-container {
-  max-width: 1290px;
+  max-width: calc(100% - 150px);
   margin: 0 auto;
 }
 
 .result-header {
-  margin-top: 14px;
+  margin-top: 72px;
   .c-icon {
     margin-left: 16px;
   }
@@ -113,4 +120,48 @@ body {
   height: 2px;
   margin: 14px 0px;
   background: rgba(112, 112, 112, 0.3);
+}
+.no-result {
+  height: 40vh;
+  // background: cadetblue;
+  h5 {
+    padding: 48px;
+    text-align: center;
+    color: $primary;
+  }
+}
+
+//EventBottom
+.blue-wave {
+  // background: brown;
+  background-image: url('http://localhost:3000/Pic/SVG/wave-blue-with-couple-1440-01.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  height: 291px;
+  transform: translateY(3px);
+}
+.wave-height {
+  background: $primary-100;
+}
+.theme {
+  width: calc(100% - 150px);
+  margin: 0px auto;
+  flex-wrap: wrap;
+  padding: 60px 0px 120px 0px;
+}
+
+.theme-button {
+  background: $primary-050;
+  padding: 17px 34px;
+  border: 1px transparent;
+  color: $primary-300;
+  font-size: $font-size-base * 1.5;
+  letter-spacing: 1.92px;
+  margin: 18px;
+
+  &:hover {
+    color: white;
+    background: #4f7f9a;
+  }
 }
