--- a/src/style/footer_custom.scss
+++ b/src/style/footer_custom.scss
@@ -8,11 +8,13 @@
 //   padding: 60px 15px 0;
 // }
 
+body {
+  min-height: 100%;
+}
 .footer {
   width: 100%;
-  //   height: 100%;
+  height: 100%;
   padding: 43px 0 0 0;
-  // background-color: #104b6d;
   margin: 0 201px 0 0;
 }
 
@@ -48,5 +50,6 @@
   p {
     padding: 10px;
     color: rgb(255, 255, 255);
+    margin: 0;
   }
 }
