--- a/src/style/event_search.scss
+++ b/src/style/event_search.scss
@@ -265,3 +265,55 @@ body {
     }
   }
 }
+
+//EventAlbum
+.album-page {
+  max-width: calc(100% - 240px);
+  margin: 0px auto;
+  .go-back {
+    margin: 28px 0px 42px 0px;
+    font-size: 16px;
+  }
+  .title {
+    h6 {
+      margin-bottom: 8px;
+    }
+    .upload-button {
+      background: $primary;
+      padding: 8px 16px;
+      border: 1px transparent;
+      color: white;
+      font-size: 14px;
+      letter-spacing: 1.92px;
+      margin: 18px;
+
+      &:hover {
+        color: white;
+        background: #4f7f9a;
+      }
+    }
+  }
+  .album-slider {
+    margin: 50px auto;
+    // background: slategray;
+    .arrow {
+      transition: 0.5s;
+      padding: 0px;
+      cursor: pointer;
+      &:hover {
+        background: rgba(112, 112, 112, 0.1);
+      }
+    }
+    .album-content {
+      flex-wrap: wrap;
+      .photo-card {
+        cursor: pointer;
+        margin-bottom: 20px;
+        figure {
+          height: 28vh;
+          background: skyblue;
+        }
+      }
+    }
+  }
+}
