--- a/src/style/member_content.scss
+++ b/src/style/member_content.scss
@@ -25,7 +25,7 @@
   }
 
   .btn-style {
-    width: 82px;
+    // width: 82px;
     height: 34px;
     border-radius: 25px;
     background-color: #104b6d;
