--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -100,7 +100,7 @@ body {
 .bg-primary-600 {
   background: $primary-600;
 }
-.bg-primary {
+.bg-primary-500 {
   background: $primary-500;
 }
 .bg-primary-400 {
