--- a/src/style/class/class_card.scss
+++ b/src/style/class/class_card.scss
@@ -1,11 +1,12 @@
-.card_body {
-  padding: 45px 0 42px 37px;
-}
-
 .card1 {
   width: 345px;
-  height: 417px;
-  border-radius: 10px;
+  height: 400px;
+  border-radius: 10px !important;
+  padding: 0px;
+}
+
+.card_body {
+  padding: 42px 0 35px 35px;
 }
 
 .paragraph {
