--- a/src/style/member_coupon.scss
+++ b/src/style/member_coupon.scss
@@ -8,7 +8,7 @@
 .coupon {
   width: 200px;
   height: 95px;
-  background-color: burlywood;
+  background-color: $primary-100;
   border-radius: 10px;
 }
 
