--- a/src/style/member.scss
+++ b/src/style/member.scss
@@ -2,6 +2,7 @@
 
 body {
   min-height: 100%;
+  max-width: 100%;
 }
 .background_wave {
   width: 100%;
@@ -13,12 +14,13 @@ body {
 }
 .wrapper {
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .bg-couple {
   -webkit-transform: scaleX(-1);
   position: absolute;
   left: 80%;
-  top: 79%;
+  bottom: 0;
   z-index: 2;
 }
