--- a/src/style/event_search.scss
+++ b/src/style/event_search.scss
@@ -34,64 +34,56 @@
 .carousel-indicators {
   display: none !important;
 }
-
-body {
+.wrapper {
   position: relative;
   .wave1 {
     position: absolute;
-    top: calc(100vh - 290px);
-    background-image: url('http://localhost:3000/Pic/SVG/wave-white-1440.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top;
+    bottom: 0px;
     width: 100%;
-    height: 291px;
-    // background: blue;
-    // img {
-    //   width: 100vw;
-    //   object-fit: contain;
-    // }
-  }
-  .event-search-bar {
-    position: absolute;
-    z-index: 50;
-    top: 372px;
-    left: 75px;
-    // background: blue;
-    h4 {
-      padding-left: 15px;
-      color: #fff;
-      font-family: 'TaipeiSansTCBeta-Bold';
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 0.2em rgb(128, 128, 128);
-    }
-    .ta {
-      color: #fff;
-      border: 1px solid #fff;
-    }
-    .hot {
-      color: #fff;
-    }
-    .searchbar {
-      margin-left: 0px;
-    }
-    .ta:hover {
-      color: $secondary;
-      border: 1px solid $secondary;
-    }
+    transform: translateY(3px);
+    z-index: 53;
   }
   .scroll {
     position: absolute;
     font-family: 'TaipeiSansTCBeta-Bold';
     z-index: 55;
     right: 91px;
-    top: calc(100vh - 72px);
+    bottom: 48px;
     color: $primary;
     // background: blue;
     text-align: right;
     .c-icon {
       margin-left: 12px;
     }
+  }
+}
+
+.event-search-bar {
+  position: absolute;
+  z-index: 50;
+  top: 372px;
+  left: 75px;
+  // background: blue;
+  h4 {
+    padding-left: 15px;
+    color: #fff;
+    font-family: 'TaipeiSansTCBeta-Bold';
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 0.2em rgb(128, 128, 128);
+  }
+  .ta {
+    color: #fff;
+    border: 1px solid #fff;
+  }
+  .hot {
+    color: #fff;
+  }
+  .searchbar {
+    margin-left: 0px;
+  }
+  .ta:hover {
+    color: $secondary;
+    border: 1px solid $secondary;
   }
 }
 
@@ -106,7 +98,7 @@ body {
 
 //EventResult
 .event-container {
-  max-width: calc(100% - 150px);
+  max-width: 1160px;
   margin: 0 auto;
 }
 
@@ -144,11 +136,11 @@ body {
 //EventBottom
 .blue-wave-with-couple {
   // background: brown;
-  background-image: url('http://localhost:3000/Pic/SVG/wave-blue-with-couple-1440-01.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top;
-  height: 291px;
+  // background-image: url('http://localhost:3000/Pic/SVG/wave-blue-1440.svg');
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: top;
+  // height: 291px;
   transform: translateY(3px);
 }
 .wave-height {
