--- a/src/style/event_main.scss
+++ b/src/style/event_main.scss
@@ -34,7 +34,7 @@
 .carousel-indicators {
   display: none !important;
 }
-.wrapper {
+.event-wrapper {
   position: relative;
   .wave1 {
     position: absolute;
