--- a/src/style/member_coupon.scss
+++ b/src/style/member_coupon.scss
@@ -14,8 +14,10 @@
 
 .btn_style {
   height: 34px;
+  padding: 8px 16px;
   border-radius: 25px;
   background-color: #104b6d;
   color: #ffffff;
   font-family: 'TaipeiSansTCBeta-Regular';
+  border: 0;
 }
