--- a/src/style/member_content.scss
+++ b/src/style/member_content.scss
@@ -1,6 +1,7 @@
 @import 'default.scss';
 .mem_box {
   width: 825px;
+  height: 100%;
   border-radius: 10px;
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
 
