--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -37,10 +37,9 @@ $h4-font-size: $font-size-base * 2.125;
 $h5-font-size: $font-size-base * 1.5;
 $h6-font-size: $font-size-base * 1.25;
 
-$navbar-light-color:               $primary-500 ;
-$navbar-light-hover-color:          $primary-100;
-$navbar-light-active-color:         $secondary;
-
+$navbar-light-color: $primary-500;
+$navbar-light-hover-color: $primary-100;
+$navbar-light-active-color: $secondary;
 
 @import '~bootstrap/scss/bootstrap.scss';
 @font-face {
@@ -61,6 +60,8 @@ body {
 }
 
 $rose: #f3b4ba;
+$grey-default: #707070;
+$grey-darkest: #212121;
 
 body {
   margin: 0;
