--- a/src/style/soya/searchbar.scss
+++ b/src/style/soya/searchbar.scss
@@ -1,5 +1,4 @@
-// 導入bootstrap所有的樣式與預設變數
-@import '~bootstrap/scss/bootstrap.scss';
+
 
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 @import '../default.scss';
@@ -26,6 +25,7 @@
       background: #12D0C9;
       color: white;
       box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
+    
   
       &:hover {
         color: white;
@@ -40,11 +40,13 @@
       color: #104B6D;
       border: 1px solid #104B6D;
       font-size: 14px;
+      font-family: 'TaipeiSansTCBeta-Regular';
     }
   
     .hot {
       margin-top: 18px;
       padding: 5px 0px 5px 0;
       color: #104B6D;
+      font-family: 'TaipeiSansTCBeta-Regular';
     }
   }
