--- a/src/style/soya/soya1.scss
+++ b/src/style/soya/soya1.scss
@@ -1,7 +1,3 @@
-// 導入bootstrap所有的樣式與預設變數
-@import '~bootstrap/scss/bootstrap.scss';
-
-
 
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 @import '../default.scss';
@@ -9,17 +5,7 @@
 $url: "http://localhost:3000";
 
 
-  
-  .wrapper {
-    max-width: 1440px;
-    margin: 0 auto;
-  }
-  
-  .cover-fit {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-  }
+
   
   .soya1 {
     height: 920px;
@@ -27,6 +13,19 @@ $url: "http://localhost:3000";
     background: url($url + "/pic/soya/Group778.png");
     background-size: cover;
     box-sizing: border-box;
+
+
+      
+    .wrapper {
+      max-width: 1440px;
+      margin: 0 auto;
+    }
+    
+    .cover-fit {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
 
 
 
@@ -45,7 +44,7 @@ $url: "http://localhost:3000";
       font-size: 60px;
       padding: 58px 0 0 0px;
       color: #707070;
-      font-weight: bold;
+      font-family: 'TaipeiSansTCBeta-Bold';
     }
     .fixbutton {
       width: 80px;
