--- a/src/style/class/Carousel1.scss
+++ b/src/style/class/Carousel1.scss
@@ -1,9 +1,9 @@
-.carousel {
-  max-width: 1160px;
-  height: 500px;
-}
-.carousel_block {
+.class_carousel_block {
   margin: 40px auto 0;
   display: flex;
   flex-direction: column;
+  .class_carousel {
+    max-width: 1160px;
+    height: 500px;
+  }
 }
